--- a/frameworks/qt/plugins/map/dmzQtPluginMapProperties.ui
+++ b/frameworks/qt/plugins/map/dmzQtPluginMapProperties.ui
@@ -39,6 +39,9 @@
    </item>
    <item>
     <widget class="QGroupBox" name="groupBox">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
      <property name="title">
       <string>Map Source</string>
      </property>
