--- a/frameworks/qt/plugins/map/dmzQtPluginMapProperties.ui
+++ b/frameworks/qt/plugins/map/dmzQtPluginMapProperties.ui
@@ -172,8 +172,8 @@
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>248</x>
-     <y>254</y>
+     <x>254</x>
+     <y>395</y>
     </hint>
     <hint type="destinationlabel">
      <x>157</x>
@@ -188,12 +188,28 @@
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>316</x>
-     <y>260</y>
+     <x>322</x>
+     <y>395</y>
     </hint>
     <hint type="destinationlabel">
      <x>286</x>
      <y>274</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>mapAdapterListWidget</sender>
+   <signal>doubleClicked(QModelIndex)</signal>
+   <receiver>mapAdapterEditButton</receiver>
+   <slot>click()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>185</x>
+     <y>161</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>327</x>
+     <y>117</y>
     </hint>
    </hints>
   </connection>
