--- a/frameworks/qt/plugins/map/dmzQtPluginMapPropertiesMapAdapter.ui
+++ b/frameworks/qt/plugins/map/dmzQtPluginMapPropertiesMapAdapter.ui
@@ -74,7 +74,7 @@
    <item>
     <widget class="QStackedWidget" name="stackedWidget">
      <property name="currentIndex">
-      <number>0</number>
+      <number>1</number>
      </property>
      <widget class="QWidget" name="page">
       <layout class="QFormLayout" name="formLayout_3">
@@ -199,7 +199,7 @@
        <item row="0" column="1">
         <widget class="QLineEdit" name="mainPathLineEdit">
          <property name="text">
-          <string>/wms/?</string>
+          <string>/wms/</string>
          </property>
         </widget>
        </item>
