--- a/frameworks/qt/plugins/canvas/dmzQtPluginCanvasZoomPan.ui
+++ b/frameworks/qt/plugins/canvas/dmzQtPluginCanvasZoomPan.ui
@@ -1,7 +1,8 @@
-<ui version="4.0" >
+<?xml version="1.0" encoding="UTF-8"?>
+<ui version="4.0">
  <class>zoomPanForm</class>
- <widget class="QWidget" name="zoomPanForm" >
-  <property name="geometry" >
+ <widget class="QWidget" name="zoomPanForm">
+  <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
@@ -9,83 +10,74 @@
     <height>78</height>
    </rect>
   </property>
-  <property name="windowTitle" >
+  <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QHBoxLayout" >
-   <property name="spacing" >
+  <layout class="QHBoxLayout">
+   <property name="spacing">
     <number>4</number>
    </property>
-   <property name="leftMargin" >
-    <number>0</number>
-   </property>
-   <property name="topMargin" >
-    <number>0</number>
-   </property>
-   <property name="rightMargin" >
-    <number>0</number>
-   </property>
-   <property name="bottomMargin" >
+   <property name="margin">
     <number>0</number>
    </property>
    <item>
-    <layout class="QHBoxLayout" >
-     <property name="spacing" >
+    <layout class="QHBoxLayout" name="horizontalLayout">
+     <property name="spacing">
       <number>4</number>
      </property>
      <item>
-      <widget class="QToolButton" name="zoomOutButton" >
-       <property name="text" >
+      <widget class="QToolButton" name="zoomOutButton">
+       <property name="text">
         <string>-</string>
        </property>
-       <property name="autoRepeat" >
+       <property name="autoRepeat">
         <bool>true</bool>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QSlider" name="zoomSlider" >
-       <property name="minimum" >
+      <widget class="QSlider" name="zoomSlider">
+       <property name="minimum">
         <number>0</number>
        </property>
-       <property name="maximum" >
+       <property name="maximum">
         <number>100</number>
        </property>
-       <property name="singleStep" >
+       <property name="singleStep">
         <number>1</number>
        </property>
-       <property name="pageStep" >
+       <property name="pageStep">
         <number>5</number>
        </property>
-       <property name="value" >
+       <property name="value">
         <number>50</number>
        </property>
-       <property name="sliderPosition" >
+       <property name="sliderPosition">
         <number>50</number>
        </property>
-       <property name="orientation" >
+       <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
-       <property name="invertedAppearance" >
+       <property name="invertedAppearance">
         <bool>false</bool>
        </property>
-       <property name="invertedControls" >
+       <property name="invertedControls">
         <bool>false</bool>
        </property>
-       <property name="tickPosition" >
+       <property name="tickPosition">
         <enum>QSlider::NoTicks</enum>
        </property>
-       <property name="tickInterval" >
+       <property name="tickInterval">
         <number>5</number>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QToolButton" name="zoomInButton" >
-       <property name="text" >
+      <widget class="QToolButton" name="zoomInButton">
+       <property name="text">
         <string>+</string>
        </property>
-       <property name="autoRepeat" >
+       <property name="autoRepeat">
         <bool>true</bool>
        </property>
       </widget>
@@ -93,56 +85,53 @@
     </layout>
    </item>
    <item>
-    <layout class="QGridLayout" >
-     <property name="horizontalSpacing" >
+    <layout class="QGridLayout" name="gridLayout">
+     <property name="spacing">
       <number>2</number>
      </property>
-     <property name="verticalSpacing" >
-      <number>2</number>
-     </property>
-     <item row="0" column="1" >
-      <widget class="QToolButton" name="panUpButton" >
-       <property name="text" >
+     <item row="0" column="1">
+      <widget class="QToolButton" name="panUpButton">
+       <property name="text">
         <string>N</string>
        </property>
-       <property name="autoRepeat" >
+       <property name="autoRepeat">
         <bool>true</bool>
        </property>
       </widget>
      </item>
-     <item row="1" column="0" >
-      <widget class="QToolButton" name="panLeftButton" >
-       <property name="text" >
+     <item row="1" column="0">
+      <widget class="QToolButton" name="panLeftButton">
+       <property name="text">
         <string>W</string>
        </property>
-       <property name="autoRepeat" >
+       <property name="autoRepeat">
         <bool>true</bool>
        </property>
       </widget>
      </item>
-     <item row="1" column="1" >
-      <widget class="QToolButton" name="zoomAllButton" >
-       <property name="text" >
+     <item row="1" column="1">
+      <widget class="QToolButton" name="zoomAllButton">
+       <property name="text">
         <string>...</string>
        </property>
       </widget>
      </item>
-     <item row="1" column="2" >
-      <widget class="QToolButton" name="panRightButton" >
-       <property name="text" >
+     <item row="1" column="2">
+      <widget class="QToolButton" name="panRightButton">
+       <property name="text">
         <string>E</string>
        </property>
-       <property name="autoRepeat" >
+       <property name="autoRepeat">
         <bool>true</bool>
        </property>
       </widget>
      </item>
-     <item row="2" column="1" >
-      <widget class="QToolButton" name="panDownButton" >
-       <property name="text" >
+     <item row="2" column="1">
+      <widget class="QToolButton" name="panDownButton">
+       <property name="text">
         <string>S</string>
        </property>
-       <property name="autoRepeat" >
+       <property name="autoRepeat">
         <bool>true</bool>
        </property>
       </widget>
@@ -150,38 +139,38 @@
     </layout>
    </item>
   </layout>
-  <action name="zoomOutAction" >
-   <property name="text" >
+  <action name="zoomOutAction">
+   <property name="text">
     <string>Zoom Out</string>
    </property>
   </action>
-  <action name="zoomInAction" >
-   <property name="text" >
+  <action name="zoomInAction">
+   <property name="text">
     <string>Zoom In</string>
    </property>
   </action>
-  <action name="panUpAction" >
-   <property name="text" >
+  <action name="panUpAction">
+   <property name="text">
     <string>Pan Up</string>
    </property>
   </action>
-  <action name="panDownAction" >
-   <property name="text" >
+  <action name="panDownAction">
+   <property name="text">
     <string>Pan Down</string>
    </property>
   </action>
-  <action name="panLeftAction" >
-   <property name="text" >
+  <action name="panLeftAction">
+   <property name="text">
     <string>Pan Left</string>
    </property>
   </action>
-  <action name="panRightAction" >
-   <property name="text" >
+  <action name="panRightAction">
+   <property name="text">
     <string>Pan Right</string>
    </property>
   </action>
-  <action name="zoomAllAction" >
-   <property name="text" >
+  <action name="zoomAllAction">
+   <property name="text">
     <string>Zoom Extents</string>
    </property>
   </action>
