moved map menu actions from menu plugin to the map properties plugin

--- a/frameworks/qt/plugins/map/dmzQtPluginMapProperties.ui
+++ b/frameworks/qt/plugins/map/dmzQtPluginMapProperties.ui
@@ -17,7 +17,7 @@
    <item>
     <widget class="QCheckBox" name="mapCheckBox">
      <property name="text">
-      <string>Enable Map</string>
+      <string>Show Map</string>
      </property>
      <property name="checked">
       <bool>true</bool>
