dumping the qtpropertybrowser solution code for using just regular QTreeView and QStandardItemModel. the qt solution was much more complex and what hard to get to do what I wanted. Lets hope this route turns out better.

--- a/frameworks/qt/plugins/object/ObjectInspectorForm.ui
+++ b/frameworks/qt/plugins/object/ObjectInspectorForm.ui
@@ -15,12 +15,15 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <widget class="QtTreePropertyBrowser" name="propertyEditor" native="true">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
+    <widget class="QTreeView" name="treeView">
+     <property name="alternatingRowColors">
+      <bool>true</bool>
+     </property>
+     <property name="uniformRowHeights">
+      <bool>true</bool>
+     </property>
+     <property name="allColumnsShowFocus">
+      <bool>true</bool>
      </property>
     </widget>
    </item>
@@ -60,14 +63,6 @@
    </item>
   </layout>
  </widget>
- <customwidgets>
-  <customwidget>
-   <class>QtTreePropertyBrowser</class>
-   <extends>QWidget</extends>
-   <header location="global">qttreepropertybrowser.h</header>
-   <container>1</container>
-  </customwidget>
- </customwidgets>
  <resources/>
  <connections/>
 </ui>
