--- a/frameworks/qt/plugins/net/NetworkActivity.ui
+++ b/frameworks/qt/plugins/net/NetworkActivity.ui
@@ -45,6 +45,20 @@
        </property>
       </spacer>
      </item>
+     <item>
+      <widget class="QLabel" name="label_10">
+       <property name="text">
+        <string>Peak data:</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLabel" name="peakLabel">
+       <property name="text">
+        <string>0.0 KB</string>
+       </property>
+      </widget>
+     </item>
     </layout>
    </item>
    <item>
@@ -161,6 +175,43 @@
         </item>
         <item row="2" column="1">
          <widget class="QLabel" name="dataReceivedPerSecLabel">
+          <property name="palette">
+           <palette>
+            <active>
+             <colorrole role="WindowText">
+              <brush brushstyle="SolidPattern">
+               <color alpha="255">
+                <red>0</red>
+                <green>201</green>
+                <blue>0</blue>
+               </color>
+              </brush>
+             </colorrole>
+            </active>
+            <inactive>
+             <colorrole role="WindowText">
+              <brush brushstyle="SolidPattern">
+               <color alpha="255">
+                <red>0</red>
+                <green>201</green>
+                <blue>0</blue>
+               </color>
+              </brush>
+             </colorrole>
+            </inactive>
+            <disabled>
+             <colorrole role="WindowText">
+              <brush brushstyle="SolidPattern">
+               <color alpha="255">
+                <red>69</red>
+                <green>69</green>
+                <blue>69</blue>
+               </color>
+              </brush>
+             </colorrole>
+            </disabled>
+           </palette>
+          </property>
           <property name="text">
            <string>0.0 KB</string>
           </property>
@@ -175,6 +226,43 @@
         </item>
         <item row="3" column="1">
          <widget class="QLabel" name="dataSentPerSecLabel">
+          <property name="palette">
+           <palette>
+            <active>
+             <colorrole role="WindowText">
+              <brush brushstyle="SolidPattern">
+               <color alpha="255">
+                <red>255</red>
+                <green>0</green>
+                <blue>0</blue>
+               </color>
+              </brush>
+             </colorrole>
+            </active>
+            <inactive>
+             <colorrole role="WindowText">
+              <brush brushstyle="SolidPattern">
+               <color alpha="255">
+                <red>255</red>
+                <green>0</green>
+                <blue>0</blue>
+               </color>
+              </brush>
+             </colorrole>
+            </inactive>
+            <disabled>
+             <colorrole role="WindowText">
+              <brush brushstyle="SolidPattern">
+               <color alpha="255">
+                <red>69</red>
+                <green>69</green>
+                <blue>69</blue>
+               </color>
+              </brush>
+             </colorrole>
+            </disabled>
+           </palette>
+          </property>
           <property name="text">
            <string>0.0 KB</string>
           </property>
