--- a/frameworks/qt/plugins/tools/IconFrame.ui
+++ b/frameworks/qt/plugins/tools/IconFrame.ui
@@ -27,8 +27,8 @@
      </property>
      <property name="iconSize">
       <size>
-       <width>100</width>
-       <height>100</height>
+       <width>72</width>
+       <height>72</height>
       </size>
      </property>
      <property name="flow">
@@ -39,6 +39,12 @@
      </property>
      <property name="resizeMode">
       <enum>QListView::Adjust</enum>
+     </property>
+     <property name="gridSize">
+      <size>
+       <width>100</width>
+       <height>100</height>
+      </size>
      </property>
      <property name="viewMode">
       <enum>QListView::IconMode</enum>
