Added icon to drag and drop

--- a/frameworks/qt/plugins/tools/IconFrame.ui
+++ b/frameworks/qt/plugins/tools/IconFrame.ui
@@ -21,7 +21,7 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <widget class="QListView" name="iconView">
+    <widget class="dmz::QtActionListView" name="iconView">
      <property name="dragEnabled">
       <bool>true</bool>
      </property>
@@ -56,6 +56,13 @@
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>dmz::QtActionListView</class>
+   <extends>QListView</extends>
+   <header>dmzQtActionListView.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
