--- a/frameworks/qt/plugins/graph/GraphForm.ui
+++ b/frameworks/qt/plugins/graph/GraphForm.ui
@@ -28,6 +28,9 @@
      <property name="alignment">
       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
      </property>
+     <property name="viewportUpdateMode">
+      <enum>QGraphicsView::FullViewportUpdate</enum>
+     </property>
     </widget>
    </item>
    <item>
